# curso-docker

./: LICENSE  README.md  docker-swarm-comandos.md
codigos/api01/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
codigos/voting-app/: README.md  docker-compose-simple.yml  docker-stack.yml
stacks/: portainer-stack.yaml  template-stack.yaml  traefik-stack.yaml
