[tool.poetry]
name = "api"
version = "0.1.0"
description = "API de exemplo para o curso de Docker"
authors = ["Patrick Alves <cpatrickalves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
